tests/build/cases/widget/missing_semi.stderr
error: expected `;`
  --> cases/widget/missing_semi.rs:11:9
   |
11 |         margin = 10
   |         ^^^^^^
